<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/diagonal_input_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagonal_input_unit"
        app:layout_constraintBottom_toBottomOf="@+id/diagonal_input"
        app:layout_constraintStart_toEndOf="@+id/diagonal_input"
        app:layout_constraintTop_toTopOf="@+id/diagonal_input" />

    <TextView
        android:id="@+id/diagonal_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/diagonal_input_label"
        app:layout_constraintStart_toStartOf="@+id/diagonal_input"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/diagonal_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/diagonal_input_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diagonal_input_label" />

    <TextView
        android:id="@+id/price_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/price_input_label"
        app:layout_constraintStart_toStartOf="@+id/price_input"
        app:layout_constraintTop_toBottomOf="@+id/diagonal_input" />

    <EditText
        android:id="@+id/price_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/price_input_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_input_label" />

    <TextView
        android:id="@+id/price_input_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_input_unit"
        app:layout_constraintBottom_toBottomOf="@+id/price_input"
        app:layout_constraintStart_toEndOf="@+id/price_input"
        app:layout_constraintTop_toTopOf="@+id/price_input" />

    <TextView
        android:id="@+id/ratio_display_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:text="@string/ratio_display_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_input" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ratio_display_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratio_display_label">

        <TextView
            android:id="@+id/ratio_display_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ratio_unit"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ratio_display"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ratio_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ratio_display_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_pizza_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/add_pizza_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratio_display_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/added_pizza_models_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratio_display_container" />

</androidx.constraintlayout.widget.ConstraintLayout>